--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftl
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=travelAgency
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=travelAgency
 
 
 #spring.data.mongodb.username=admin
